# CS4032-Lab2

./: README.md
CS4032-DFS/: Readme.md  client.py  directoryService.py  distributedTransparentFileAccess.py  lockService.py
CS4032-DFS/drive/: test2.txt
Lab 4/: Lab4.cabal
Lab 4/code/: Main.hs  Semaphore.hs  Server.hs
Lab2/: Server.hi  Server.hs  compile.sh  server.py  start.sh
Lab2/client/: Client.hi  Client.hs
